# Simulation

./: .gitignore  BUILD.md  CMakeLists.txt  asan_ignore.txt  cachegrind.out.112108  compile_commands.json  log.txt  test_world.sim  test_world1.sim
.cache/clangd/index/: Arena.cpp.E487491C8679ABB1.idx  Arena.hpp.8462C8342CE9145D.idx  Material.cpp.FDD00AB2065036AF.idx  Material.hpp.747C80262593ADC4.idx  PoolArena.cpp.0B686945239C4325.idx  PoolArena.hpp.32B869822AD4E22A.idx  Renderer.cpp.EBC0FB60AD9F326E.idx  Renderer.hpp.5F995D589B1DA826.idx  Shader.hpp.BAFD842ED92B3C2F.idx  Updater.cpp.F7440EFA9E9C9A44.idx  Updater.hpp.5D0905933234CAD0.idx  _fixes.hpp.7E4C337682F4DAA6.idx  _vectorize.hpp.526DDD26AC7F0BD3.idx  arena_test.cpp.31CE7AAF86862E4F.idx  common.hpp.71EDD86FCF7F41DE.idx  compute_common.hpp.604D45B2DC798CBA.idx  compute_vector_relational.hpp.9108E3CE326DA08C.idx  constants.hpp.9C402997560426E3.idx  constants.inl.C3B1B501636FD3FE.idx  epsilon.hpp.3C08304556B32A23.idx  epsilon.inl.FBC311B620444156.idx  exponential.hpp.08B45EFD44379B06.idx  func_common.inl.559A1EEC2FFA0C79.idx  func_exponential.inl.41C414204F316A16.idx  func_geometric.inl.AB1158D1251411A8.idx  func_integer.inl.A700C211A7F8F31B.idx  func_matrix.inl.185580720899972D.idx  func_packing.inl.A5E70AFAB94BA942.idx  func_trigonometric.inl.B49B3EA505190BA8.idx  func_vector_relational.inl.AE442F57FB9A2164.idx  fwd.hpp.1C25258780B8731B.idx  geometric.hpp.0BD8CF9E45A8CE84.idx  glad.c.E67588B789081EDE.idx  glad.h.A0687B3EBE68B256.idx  glm.hpp.80D4A675458997B3.idx  integer.hpp.96F5BB1B6F5F5EE3.idx  khrplatform.h.45281C6762055380.idx  main.cpp.91E27BCB254AD395.idx  main.cpp.AAF487426AA4AE50.idx  mat2x2.hpp.6AA64B25581C3ABD.idx  (+160 more)
glad/include/glad/: glad.h
glad/src/: glad.c
glfw-3.4/: CMakeLists.txt
glfw-3.4/src/: cocoa_time.c:Zone.Identifier
include/: Arena.hpp  ChunkHandler.hpp  Elements.hpp  InputHandler.hpp  Logger.hpp  Material.hpp  PoolArena.hpp  Renderer.hpp  Shader.hpp  States.hpp  SwapbackArray.hpp  Updater.hpp  World.hpp
shaders/: debug_frag_shader.glsl  debug_vert_shader.glsl  fbo_frag.frag  fbo_vert.vert  frame_frag.frag  frame_vert.vert  material_frag_shader.glsl  material_vert_shader.glsl
src/arenas/: Arena.cpp  PoolArena.cpp
src/game/: ChunkHandler.cpp  Elements.cpp  InputHandler.cpp  Logger.cpp  Material.cpp  Renderer.cpp  World.cpp  main.cpp
src/shaders/: fragment.frag  frame_frag.frag  frame_vert.vert  shader_util.cpp
src/utilities/: SwapbackArray.cpp
test/: CMakeLists.txt  test.cpp
